Fixed the grip gap for the footer

--- a/style/styles.css
+++ b/style/styles.css
@@ -63,6 +63,7 @@ section {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 footer {
@@ -87,7 +88,6 @@ footer p {
   font-weight: 400;
   line-height: 24px;
   opacity: 0.7;
-  margin-right: 20px;
 }
 footer ul {
   padding: 0;
